--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -123,7 +123,7 @@ misc {
 
 input {
     kb_layout = us
-    kb_variant =  
+    kb_variant = intl
     kb_model =
     kb_options =
     kb_rules =
