--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -123,7 +123,7 @@ misc {
 
 input {
     kb_layout = us
-    kb_variant = intl
+    kb_variant = intl 
     kb_model =
     kb_options =
     kb_rules =
@@ -134,7 +134,7 @@ input {
 
     touchpad {
         natural_scroll = false
-    }
+     }
 }
 
 
@@ -214,22 +214,37 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 ### WINDOWS AND WORKSPACES ###
 ##############################
 
-windowrule = suppressevent maximize, class:.*
+windowrule = match:class suppress_event, maximize 1
 
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrule = match:class ^(Code)$, opacity 0.8
 
-windowrulev2 = opacity 0.8 0.8, class:^(Code)$
+windowrule = match:title ^(Picture-in-picture)$, float on, pin on
 
-windowrulev2 = float, title:^(Picture-in-picture)$
-windowrulev2 = pin, title:^(Picture-in-picture)$
+windowrule {
+    name = suppress-maximize-events
+    match:class = .*
 
+    suppress_event = maximize
+}
+
+windowrule {
+    name = fix-xwayland-drags
+    match:class = ^$
+    match:title = ^$
+    match:xwayland = true
+    match:float = true
+    match:fullscreen = false
+    match:pin = false
+
+    no_focus = true
+}
 
 ##############################
 ###        HYPRSHOT        ###
 ##############################
 
-layerrule = noanim, hyprpicker
-layerrule = noanim, selection
+layerrule = match:namespace hyprpicker, no_anim on
+layerrule = match:namespace selection, no_anim on
 
 # Path
 env = HYPRSHOT_DIR,/home/$USER/screenshots  
