fix: hypr-paper new syntax

--- a/hyprland/.config/hypr/hyprpaper.conf
+++ b/hyprland/.config/hypr/hyprpaper.conf
@@ -1,5 +1,7 @@
-preload = /home/$USER/.config/hypr/wallpaper/default.jpg
-
-wallpaper = DP-2,/home/$USER/.config/hypr/wallpaper/default.jpg
+wallpaper {
+    monitor = DP-2
+    path =  ~/.config/hypr/wallpaper/default.jpg
+    fit_mode = cover
+}
 
 splash = false
